--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-profile/knowledge-box-profile.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-profile/knowledge-box-profile.component.html
@@ -48,20 +48,20 @@
           [rows]="4"></pa-textarea>
       </div>
 
-      <div *ngIf="hasAnswers">
+      <div
+        formGroupName="config"
+        *ngFor="let conf of displayedLearningConfigurations">
         <div class="label">
-          <label class="title-s">
-            {{ 'stash.create.generative_model' | translate }}
-          </label>
-          <p>
-            {{ 'stash.create.generative_model.help' | translate }}
-          </p>
+          <label class="title-s">{{ 'stash.create.' + conf.id | translate }}</label>
+          <div>
+            <small>{{ 'stash.create.' + conf.id + '.help' | translate }}</small>
+          </div>
         </div>
         <pa-radio-group
-          formControlName="generative_model"
-          name="generative_model">
+          [formControlName]="conf.id"
+          [name]="conf.id">
           <pa-radio
-            *ngFor="let value of modelOptions"
+            *ngFor="let value of conf.data.options"
             [value]="value.value">
             {{ value.name }}
           </pa-radio>
