show server status

--- a/apps/desktop/src/app/main-layout/topbar.component.html
+++ b/apps/desktop/src/app/main-layout/topbar.component.html
@@ -6,6 +6,11 @@
       src="assets/nuclia-desktop-white.svg"
       alt="Nuclia Desktop" />
   </div>
+  <div class="status">
+    <span *ngIf="isServerDown | async">
+      {{ 'generic.server_down' | translate }}
+    </span>
+  </div>
   <div class="accounts">
     <pa-button
       *ngIf="account | async as account"
