--- a/apps/desktop/src/app/main-layout/topbar.component.scss
+++ b/apps/desktop/src/app/main-layout/topbar.component.scss
@@ -16,8 +16,10 @@
   cursor: pointer;
   margin-left: rhythm(3);
 }
-.accounts {
+.status {
   margin-left: auto;
+  color: $color-secondary-regular;
+  padding: 0 rhythm(2);
 }
 .separator {
   width: 1px;
