Add feature flag

--- a/apps/dashboard/src/app/account/billing/subscriptions/subscriptions.component.html
+++ b/apps/dashboard/src/app/account/billing/subscriptions/subscriptions.component.html
@@ -3,6 +3,7 @@
     <th>
       <h2>{{ 'billing.subscription_plans' | translate }}</h2>
       <pa-button
+        *ngIf="isCalculatorEnabled | async"
         (click)="openCalculator()"
         icon="settings"
         iconAndText>
