Make sure last labels can be visible

--- a/libs/common/src/lib/resources/resource-list/processed-resource-table/processed-resource-table.component.html
+++ b/libs/common/src/lib/resources/resource-list/processed-resource-table/processed-resource-table.component.html
@@ -106,7 +106,9 @@
             </div>
           </div>
         </pa-table-cell>
-        <pa-table-cell *ngIf="(visibleColumnsId | async)?.includes('classification')">
+        <pa-table-cell
+          class="classification-cell"
+          *ngIf="(visibleColumnsId | async)?.includes('classification')">
           <div class="label-container">
             <nsi-label
               *ngFor="let label of row.labels"
