Add ability to open edit flow from pending and error tables

--- a/libs/common/src/lib/resources/resource-list/resource-list.component.html
+++ b/libs/common/src/lib/resources/resource-list/resource-list.component.html
@@ -120,6 +120,7 @@
         [data]="data"
         [sorting]="sort"
         [bulkAction]="bulkAction"
+        (clickOnTitle)="viewResource($event.resource.id)"
         (menuAction)="onMenuAction($event)"
         (deleteResources)="delete($event)"
         (loadMore)="loadMore()"
@@ -131,6 +132,7 @@
         [sorting]="sort"
         [bulkAction]="bulkAction"
         [errorCount]="(statusCount | async)?.error"
+        (clickOnTitle)="viewResource($event.resource.id)"
         (isLoading)="setLoading($event)"
         (menuAction)="onMenuAction($event)"
         (deleteResources)="delete($event)"
