--- a/libs/common/src/lib/resources/resource-list/resource-list.component.html
+++ b/libs/common/src/lib/resources/resource-list/resource-list.component.html
@@ -101,7 +101,7 @@
   <div class="resource-list-content">
     <ng-container *ngIf="currentKb | async">
       <stf-processed-resource-table
-        *ngIf="isMainView && (data?.length || 0) > 0"
+        *ngIf="isMainView && ((data?.length || 0) > 0 || !!query)"
         [data]="data"
         [sorting]="sort"
         [labelSets]="labelSets$ | async"
@@ -120,6 +120,7 @@
         [data]="data"
         [sorting]="sort"
         [bulkAction]="bulkAction"
+        (clickOnTitle)="viewResource($event.resource.id)"
         (menuAction)="onMenuAction($event)"
         (deleteResources)="delete($event)"
         (loadMore)="loadMore()"
@@ -131,6 +132,7 @@
         [sorting]="sort"
         [bulkAction]="bulkAction"
         [errorCount]="(statusCount | async)?.error"
+        (clickOnTitle)="viewResource($event.resource.id)"
         (isLoading)="setLoading($event)"
         (menuAction)="onMenuAction($event)"
         (deleteResources)="delete($event)"
@@ -141,7 +143,7 @@
     </ng-container>
 
     <div
-      *ngIf="isMainView && data?.length === 0 && !standalone"
+      *ngIf="isMainView && emptyKb && !standalone"
       class="empty-kb">
       <p>
         <strong>{{ 'resource.empty' | translate }}</strong>
