Display potential error in field preview and field list

--- a/libs/common/src/lib/resources/edit-resource/edit-resource.component.html
+++ b/libs/common/src/lib/resources/edit-resource/edit-resource.component.html
@@ -82,6 +82,14 @@
             [name]="field.icon"
             size="small"></pa-icon>
           {{ 'resource.field-' + field.field_type | translate }}
+
+          <span
+            class="error-marker"
+            *ngIf="field.hasError">
+            <pa-icon
+              name="warning"
+              size="small"></pa-icon>
+          </span>
         </li>
       </ul>
     </nav>
