--- a/libs/common/src/lib/resources/edit-resource/edit-resource.component.scss
+++ b/libs/common/src/lib/resources/edit-resource/edit-resource.component.scss
@@ -55,6 +55,10 @@
         &:not(.active):hover {
           background: $color-neutral-lightest;
         }
+
+        .error-marker {
+          color: $color-secondary-strong;
+        }
       }
     }
 
