Disable reprocess button when resource status is pending

--- a/libs/common/src/lib/resources/edit-resource/edit-resource.component.html
+++ b/libs/common/src/lib/resources/edit-resource/edit-resource.component.html
@@ -49,6 +49,7 @@
         icon="refresh"
         paTooltip="resource.tooltip.reprocess"
         aspect="basic"
+        [disabled]="(resource | async)?.metadata.status === 'PENDING'"
         (click)="reprocessResource()"></pa-button>
       <pa-button
         icon="trash"
