[sc-4677] disable reprocess button when status is pending (#653)
* Display potential error in field preview and field list

* Import missing paTooltip module

* Disable reprocess button when resource status is pending

* Fix stricter build error for contributor

--- a/libs/common/src/lib/resources/edit-resource/edit-resource.component.html
+++ b/libs/common/src/lib/resources/edit-resource/edit-resource.component.html
@@ -49,6 +49,7 @@
         icon="refresh"
         paTooltip="resource.tooltip.reprocess"
         aspect="basic"
+        [disabled]="(resource | async)?.metadata?.status === 'PENDING'"
         (click)="reprocessResource()"></pa-button>
       <pa-button
         icon="trash"
@@ -82,6 +83,14 @@
             [name]="field.icon"
             size="small"></pa-icon>
           {{ 'resource.field-' + field.field_type | translate }}
+
+          <span
+            class="error-marker"
+            *ngIf="field.hasError">
+            <pa-icon
+              name="warning"
+              size="small"></pa-icon>
+          </span>
         </li>
       </ul>
     </nav>
