Improve initial answer block's style

--- a/libs/search-widget/src/common/_global.scss
+++ b/libs/search-widget/src/common/_global.scss
@@ -98,7 +98,7 @@ ul.sw-dropdown-options {
 .title-s {
   font-size: var(--font-size-medium);
   font-weight: var(--font-weight-semi-bold);
-  line-height: var(----line-height-title-s);
+  line-height: var(--line-height-title-s);
 }
 
 .body-m {
