--- a/libs/search-widget/src/components/answer/InitialAnswer.scss
+++ b/libs/search-widget/src/components/answer/InitialAnswer.scss
@@ -1,9 +1,12 @@
 .sw-initial-answer {
-  margin: var(--rhythm-1) 0;
-  border-bottom: 1px solid var(--color-neutral-light);
-  box-shadow: 0px 0px var(--rhythm-2_5) var(--color-neutral-light);
   border-radius: var(--rhythm-2);
-  padding: var(--rhythm-3);
+  box-shadow: 0 0 var(--rhythm-2_5) var(--color-neutral-light);
+  padding: var(--rhythm-2) var(--rhythm-3);
+  margin: var(--rhythm-1) 0;
+
+  .title-s {
+    margin: 0;
+  }
   .container {
     display: flex;
     flex-wrap: wrap;
@@ -15,11 +18,9 @@
   .actions {
     width: 100%;
     .go-to-chat {
-      display: flex;
       align-items: center;
-      justify-content: end;
-      cursor: pointer;
-      font-weight: var(--font-weight-semi-bold);
+      display: flex;
+      gap: var(--rhythm-1);
     }
     .feedback {
       display: none;
